fixed scrollbar on login page

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -1,10 +1,17 @@
+html, body, #root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+
 .loginWrapper {
   background-image: url("../../images/logBack.png");
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   display: flex;
   align-items: center;
+  margin: 0;
 }
 
 .loginContainer {
